# google-calendar-mcp

./: .clinerules  .env  CALUDE.md  CLINE_RULES.md  Cargo.toml  Makefile.toml
.github/workflows/: claude-assistant.yml
src/: google_calendar.rs  main.rs
