[package]
name = "google-calendar-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
derive-new = "0.7.0"
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.11", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
